--- a/index.css
+++ b/index.css
@@ -42,4 +42,106 @@ body{
 }
 .logo{
     width: 150px;
+}.home{
+    background: url(images/home.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    margin-top: -194px;
+    background-position: center;
+    display: flex;
+}
+.home-container{
+    padding: 0 7%;
+}
+.home h1{
+    margin-top: 29%;
+    color: white;
+    font-size: 60px;
+}
+
+.home p{
+    color: white;
+    font-size: 20px;
+    line-height: 25px;
+    letter-spacing: 2px;
+    width: 60%;
+    margin-top: 40px;
+}
+.home-button{
+    height: 50px;
+    width: 150px;
+    border-radius: 30px;
+    border: none;
+    background-color: darkorange;
+    color: white;
+    font-size: 20px;
+    margin-top: 30px;
+    cursor: pointer;
+    box-shadow: 4px 4px 5px white;
+}
+.home-button:hover{
+    transform: scale(1.2);
+    transition: 2s;   
+}
+#baslıkmenu{
+    text-align: center;
+    font-size: 60px;
+    box-shadow: 4px 4px 8px gray;
+}
+.container1,.container2{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    margin-top: 80px;
+}
+
+
+.container2{
+    margin-bottom: 25px;
+}
+.box{
+    padding: 30px;
+    text-align: center;
+    background-color: white;
+    margin-left: 30px;
+    border-radius: 80px;
+    box-shadow: 4px 4px 8px gray;
+}
+.box img{
+    width: 250px;
+    height: 300px;
+}
+h3,h2{
+    font-size: 20px;
+    margin-top: 15px;
+}
+.box p{
+    font-size: 20px;
+    margin-top: 15px;
+}
+.box p span{
+    font-size: 20px;
+    text-decoration: line-through red;
+    margin-left: 20px;
+}
+.btn{
+    width: 120px;
+    height: 40px;
+    border: none;
+    border-radius: 20px;
+    background-color: black;
+    color: white;
+    font-size: 16px;
+    margin-top: 15px;
+    cursor: pointer;
+    box-shadow: 4px 4px 8px gray;
+}
+.box:hover{
+    transform: scale(1.15);
+    background-color: #e84242;
+}
+.btn:hover{
+    background-color: white;
+    color: #e84242;
 }
